Burotel: Fix stats graph overflow

--- a/burotel/indico_burotel/client/js/components/StatsPage.module.scss
+++ b/burotel/indico_burotel/client/js/components/StatsPage.module.scss
@@ -11,11 +11,14 @@
     padding: 5em;
 }
 
+.stats-chart-wrapper {
+    padding: 5em;
+    background-color: rgba(0, 27, 45, 0.9);
+}
+
 .stats-chart {
     width: 100%;
     height: 500px;
-    background-color: rgba(0, 27, 45, 0.9);
-    padding: 5em;
 }
 
 :global(.ui.table td) {
